renamed libcrate libscrapper -> libscraper , added scraping and parsing for nyaa_dot_si

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,11 +7,9 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
+libscrapper = { path = "../libscrapper" }
 flutter_rust_bridge = "=2.11.1"
-html5ever = "0.35.0"
-reqwest = { version = "0.12", features = ["json"] }
-scraper = "0.23.1"
-tokio = { version = "1", features = ["full"] }
+anyhow = "1.0.99"
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
