--- a/libscraper/Cargo.toml
+++ b/libscraper/Cargo.toml
@@ -8,6 +8,8 @@ name = "test_bin"
 path = "./src/testbin.rs"
 
 [dependencies]
+anyhow = "1.0.99"
 html5ever = "0.35.0"
+rand = "0.9.2"
 reqwest = { version = "0.12.23" , features = ["blocking","json"]}
 scraper = "0.23.1"
