--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-libscrapper = { path = "../libscrapper" }
+libscrapper = { path = "../libscraper" }
 flutter_rust_bridge = "=2.11.1"
 anyhow = "1.0.99"
 
