--- a/libscraper/Cargo.toml
+++ b/libscraper/Cargo.toml
@@ -9,7 +9,9 @@ path = "./src/testbin.rs"
 
 [dependencies]
 anyhow = "1.0.99"
-html5ever = "0.35.0"
 rand = "0.9.2"
-reqwest = { version = "0.12.23" , features = ["blocking","json"]}
 scraper = "0.23.1"
+ureq = "3.1.0"
+
+[dev-dependencies]
+serde_json = "1.0.142"
