--- a/libscraper/Cargo.toml
+++ b/libscraper/Cargo.toml
@@ -9,8 +9,11 @@ path = "./src/testbin.rs"
 
 [dependencies]
 anyhow = "1.0.99"
+chrono = "0.4.41"
 rand = "0.9.2"
 scraper = "0.23.1"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.142"
 ureq = "3.1.0"
 
 [dev-dependencies]
