--- a/lib_torrent_digger/Cargo.toml
+++ b/lib_torrent_digger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libscrapper"
+name = "lib_torrent_digger"
 version = "0.1.0"
 edition = "2024"
 
@@ -10,7 +10,9 @@ path = "./src/testbin.rs"
 [dependencies]
 anyhow = "1.0.99"
 chrono = "0.4.41"
+once_cell = "1.21.3"
 rand = "0.9.2"
+rusqlite = "0.37.0"
 scraper = "0.23.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
