--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1.0.99"
 chrono = "0.4.41"
 once_cell = "1.21.3"
 rand = "0.9.2"
-rusqlite = "0.37.0"
+rusqlite = { version = "0.37.0", features = ["bundled"] }
 scraper = "0.23.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
