--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_rust_bridge: 2.11.1
   url_launcher: ^6.3.2
   path_provider: ^2.1.5
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
