--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -18,5 +18,6 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 ureq = "3.1.0"
 
-[dev-dependencies]
-serde_json = "1.0.142"
+[build-dependencies]
+ureq = "3.1.2"
+rand = "0.9.2"
