--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.3+3
+version: 1.0.4+4
 
 environment:
   sdk: ^3.8.1
@@ -40,6 +40,8 @@ dependencies:
   url_launcher: ^6.3.2
   path_provider: ^2.1.5
   flutter_bloc: ^9.1.1
+  file_picker: ^10.3.3
+  external_path: ^2.2.0
 
 dev_dependencies:
   flutter_test:
