--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,14 @@ stages:
 
 image: instrumentisto/flutter
 
-build_android:
+build_binaries:
   stage: build
   rules:
     - if: $CI_COMMIT_TAG
   script:
+    # creating releases dir.
+    - mkdir releases
+
     # Install Rust
     - apt update -y && apt upgrade -y
     - apt install -y curl git wget unzip
@@ -25,20 +28,69 @@ build_android:
     - export NEW_APK_NAME="${APP_NAME}_${APP_VERSION}.apk"
 
     # Rename APK
-    - mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/$NEW_APK_NAME
+    - mv build/app/outputs/flutter-apk/app-release.apk releases/$NEW_APK_NAME
 
     # Generate SHA256
-    - sha256sum build/app/outputs/flutter-apk/$NEW_APK_NAME > build/app/outputs/flutter-apk/$NEW_APK_NAME.sha256.txt
+    - sha256sum releases/$NEW_APK_NAME > releases/$NEW_APK_NAME.sha256.txt
 
-    # Save .env for release job at the root (important!)
+    # Save .env for release job
     - echo "NEW_APK_NAME=$NEW_APK_NAME" > build.env
+
+      # Creating AppImage
+    # Installing Dependencies
+    - apt-get update -y && sudo apt-get upgrade -y
+    - apt-get install curl git unzip xz-utils zip libglu1-mesa  build-essential libgtk-3-dev clang cmake ninja-build pkg-config liblzma-dev -y
+    - apt install file fuse -y
+
+    # Building for linux
+    - flutter config --enable-linux-desktop
+    - flutter pub get
+    - flutter build linux --release
+
+    # Grepping App Name & Version.
+    - export APP_NAME=$(grep 'name:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/-/_/g' | sed 's/\r//g');
+    - export APPIMAGE_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
+    - export NEW_APPIMAGE_NAME="${APP_NAME}_${APP_VERSION}-x86_64.AppImage"
+
+    # Copying release bundle to AppDir
+    - mkdir "${APP_NAME}.AppDir"
+    - cp -r build/linux/x64/release/bundle/ "${APP_NAME}.AppDir"
+
+    # Creating AppRun
+    - touch "${APP_NAME}.AppDir/AppRun"
+    - echo -e "#!/bin/bash\ncd \"\$(dirname \"\$0\")\"\nexec ./$APP_NAME" > "${APP_NAME}.AppDir/AppRun"
+    - chmod +x "${APP_NAME}.AppDir/AppRun"
+
+    # copying icon
+    - cp ./assets/icon.png "${APP_NAME}.AppDir"
+
+    # Creating Desktop Entry for App
+    - touch "${APP_NAME}.AppDir/test_flutter_app.desktop"
+    - echo -e "[Desktop Entry]\nVersion=${APPIMAGE_VERSION}\nType=Application\nTerminal=false\nName=${APP_NAME}\nExec=${APP_NAME} %u\nIcon=icon\nCategories=Utility" > "${APP_NAME}.AppDir/test_flutter_app.desktop"
+
+    # Downloading AppImageToolKit
+    - wget https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage
+    - chmod +x appimagetool-x86_64.AppImage
+
+    # Generating AppImage
+    - ./appimagetool-x86_64.AppImage  "${APP_NAME}.AppDir"
+
+    # deleting appimagetool-x86_64.AppImage
+    - rm -rfv appimagetool-x86_64.AppImage
+
+    # Renaming & moving AppImage to releases dir
+    - mv "${APP_NAME}-x86_64.AppImage" releases/$NEW_APPIMAGE_NAME
+
+    # Generate SHA256
+    - sha256sum releases/$NEW_APPIMAGE_NAME > releases/$NEW_APPIMAGE_NAME.sha256.txt
+
+    # Save .env for release job
+    - echo "NEW_APPIMAGE_NAME=$NEW_APPIMAGE_NAME" >> build.env
 
   artifacts:
     paths:
-      - build/app/outputs/flutter-apk/*.apk
-      - build/app/outputs/flutter-apk/*.sha256.txt
+      - releases
       - build.env # make sure dotenv is uploaded
-    expire_in: 1 week
     reports:
       dotenv: build.env
 
@@ -46,7 +98,7 @@ create-release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   needs:
-    - job: build_android
+    - job: build_binaries
       artifacts: true
   rules:
     - if: $CI_COMMIT_TAG
@@ -59,7 +111,13 @@ create-release:
     description: "Automated GitLab CI/CD release for version $CI_COMMIT_TAG"
     assets:
       links:
+        # Android Universal Fat Apk
         - name: "$NEW_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/build/app/outputs/flutter-apk/$NEW_APK_NAME?job=build_android"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APK_NAME?job=build_binaries"
         - name: "$NEW_APK_NAME.sha256.txt"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/build/app/outputs/flutter-apk/$NEW_APK_NAME.sha256.txt?job=build_android"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APK_NAME.sha256.txt?job=build_binaries"
+        # AppImage
+        - name: "$NEW_APPIMAGE_NAME"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APPIMAGE_NAME?job=build_binaries"
+        - name: "$NEW_APPIMAGE_NAME.sha256.txt"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APPIMAGE_NAME.sha256.txt?job=build_binaries"
