--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -16,7 +16,7 @@ rusqlite = { version = "0.37.0", features = ["bundled"] }
 scraper = "0.23.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
-ureq = "3.1.0"
+ureq = { version = "3.1.0", features = ["rustls","socks-proxy"] }
 
 [build-dependencies]
 rand = "0.9.2"
