--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   file_picker: ^10.3.3
   external_path: ^2.2.0
+  equatable: ^2.0.7
+  freezed_annotation: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,8 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.14.4
   change_app_package_name: ^1.5.0
+  build_runner: ^2.9.0
+  freezed: ^3.2.3
 
 flutter_launcher_icons:
   android: true
