--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -20,4 +20,4 @@ ureq = { version = "3.1.0", features = ["rustls","socks-proxy"] }
 
 [build-dependencies]
 rand = "0.9.2"
-ureq = "3.1.2"
+ureq = { version = "3.1.2", features = ["rustls"] }
