--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: 1.0.8
   rust_lib_torrents_digger:
     path: rust_builder
   flutter_rust_bridge: 2.11.1
-  url_launcher: ^6.3.2
-  path_provider: ^2.1.5
-  flutter_bloc: ^9.1.1
-  file_picker: ^10.3.3
-  external_path: ^2.2.0
-  freezed_annotation: ^3.1.0
+  url_launcher: 6.3.2
+  path_provider: 2.1.5
+  flutter_bloc: 9.1.1
+  file_picker: 10.3.3
+  external_path: 2.2.0
+  freezed_annotation: 3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -53,13 +53,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: 6.0.0
   integration_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.14.4
-  change_app_package_name: ^1.5.0
-  build_runner: ^2.9.0
-  freezed: ^3.2.3
+  flutter_launcher_icons: 0.14.4
+  change_app_package_name: 1.5.0
+  build_runner: 2.9.0
+  freezed: 3.2.3
 
 flutter_launcher_icons:
   android: true
