--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ build_binaries:
   rules:
     - if: $CI_COMMIT_TAG
   script:
+    # installing just
+    - apt install just
     # Install Rust
     - apt update -y && apt upgrade -y
     - apt install -y curl git wget unzip
@@ -73,51 +75,14 @@ build_binaries:
     - echo "ARM64_V8A_APK_NAME=$ARM64_V8A_APK_NAME" >> build.env
     - echo "X86_64_APK_NAME=$X86_64_APK_NAME" >> build.env
 
-      # Creating AppImage
-    # Installing Dependencies
-    - apt-get update -y && sudo apt-get upgrade -y
-    - apt-get install curl git unzip xz-utils zip libglu1-mesa  build-essential libgtk-3-dev clang cmake ninja-build pkg-config liblzma-dev -y
-    - apt install file fuse -y
-
-    # Building for linux
-    - flutter config --enable-linux-desktop
-    - flutter pub get
-    - flutter build linux --release
+    # Creating AppImage
 
     # Grepping App Name & Version.
+    - export APPIMAGE_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
     - export NEW_APPIMAGE_NAME="${APP_NAME}_${APP_VERSION}-x86_64.AppImage"
 
-    # Copying release bundle to AppDir
-    - mkdir "${APP_NAME}.AppDir"
-    - cp -r build/linux/x64/release/bundle/ "${APP_NAME}.AppDir"
-
-    # Creating AppRun
-    - touch "${APP_NAME}.AppDir/AppRun"
-    - echo -e "#!/bin/bash\ncd \"\$(dirname \"\$0\")\"\nexec ./bundle/$APP_NAME" > "${APP_NAME}.AppDir/AppRun"
-    - chmod +x "${APP_NAME}.AppDir/AppRun"
-
-    # copying icon
-    - cp ./assets/icon.png "${APP_NAME}.AppDir"
-
-    # Creating Desktop Entry for App
-    - touch "${APP_NAME}.AppDir/${APP_NAME}.desktop"
-    - echo -e "[Desktop Entry]\nVersion=${APP_VERSION}\nType=Application\nTerminal=false\nName=${APP_NAME}\nExec=${APP_NAME} %u\nIcon=icon\nCategories=Utility" > "${APP_NAME}.AppDir/test_flutter_app.desktop"
-
-    # Downloading AppImageToolKit
-    - wget https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage
-    - chmod +x appimagetool-x86_64.AppImage
-
-    # Generating AppImage
-    - ./appimagetool-x86_64.AppImage  "${APP_NAME}.AppDir"
-
-    # deleting appimagetool-x86_64.AppImage
-    - rm -rfv appimagetool-x86_64.AppImage
-
-    # Renaming & moving AppImage to releases dir
-    - mv "${APP_NAME}-x86_64.AppImage" releases/$NEW_APPIMAGE_NAME
-
-    # Generate SHA256
-    - sha256sum releases/$NEW_APPIMAGE_NAME > releases/$NEW_APPIMAGE_NAME.sha256.txt
+    # Build AppImage
+    - just build_appimage
 
     # Save .env for release job
     - echo "NEW_APPIMAGE_NAME=$NEW_APPIMAGE_NAME" >> build.env
