--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,57 +20,26 @@ build_binaries:
     # install just
     - cargo binstall just
 
+    # Creating essential dirs
+    - mkdir -p  build_deps_dir releases
+
     # Get app name and version
     - export APP_NAME=$(grep 'name:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/-/_/g' | sed 's/\r//g')
     - export APP_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/+//' | sed 's/ /_/g' | sed 's/\r//g')
+
     # Setting Apk Name according to cpu architectures
     - export UNIVERSAL_APK_NAME="${APP_NAME}_${APP_VERSION}_universal.apk"
     - export ARMEABI_V7A_APK_NAME="${APP_NAME}_${APP_VERSION}_armeabi-v7a.apk"
     - export ARM64_V8A_APK_NAME="${APP_NAME}_${APP_VERSION}_arm64-v8a.apk"
     - export X86_64_APK_NAME="${APP_NAME}_${APP_VERSION}_x86_64.apk"
 
-    # Build Android APK
+    # Creating releases dir
+    - mkdir -p releases
     - flutter pub get
     - dart run build_runner build # [Freezed]
-    # Universal Fat APK
-    - flutter build apk --release
-    # APK per ABI
-    - flutter build apk --release --split-per-abi
 
-    # Creating releases dir
-    - mkdir releases
-
-    # Universal APK
-    # moving to releases dir
-    - mv build/app/outputs/flutter-apk/app-release.apk releases
-    # Rename APK
-    - mv releases/app-release.apk releases/$UNIVERSAL_APK_NAME
-    # Generate SHA256
-    - sha256sum releases/$UNIVERSAL_APK_NAME > releases/$UNIVERSAL_APK_NAME.sha256.txt
-
-    # ARMEABI-V7A APK
-    # moving to releases dir
-    - mv build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk releases
-    # Rename APK
-    - mv releases/app-armeabi-v7a-release.apk releases/$ARMEABI_V7A_APK_NAME
-    # Generate SHA256
-    - sha256sum releases/$ARMEABI_V7A_APK_NAME > releases/$ARMEABI_V7A_APK_NAME.sha256.txt
-
-    # ARM64-V8A APK
-    # moving to releases dir
-    - mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk releases
-    # Rename APK
-    - mv releases/app-arm64-v8a-release.apk releases/$ARM64_V8A_APK_NAME
-    # Generate SHA256
-    - sha256sum releases/$ARM64_V8A_APK_NAME > releases/$ARM64_V8A_APK_NAME.sha256.txt
-
-    # X86_64 APK
-    # moving to releases dir
-    - mv build/app/outputs/flutter-apk/app-x86_64-release.apk releases
-    # Rename APK
-    - mv releases/app-x86_64-release.apk releases/$X86_64_APK_NAME
-    # Generate SHA256
-    - sha256sum releases/$X86_64_APK_NAME > releases/$X86_64_APK_NAME.sha256.txt
+    - just build_apk
+    - just build_apk_per_abi
 
     # Save .env for release job
     - echo "UNIVERSAL_APK_NAME=$UNIVERSAL_APK_NAME" > build.env
@@ -79,10 +48,9 @@ build_binaries:
     - echo "X86_64_APK_NAME=$X86_64_APK_NAME" >> build.env
 
     # Creating AppImage
-
     # Grepping App Name & Version.
     - export APPIMAGE_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
-    - export NEW_APPIMAGE_NAME="${APP_NAME}_${APP_VERSION}-x86_64.AppImage"
+    - export NEW_APPIMAGE_NAME="${APP_NAME}_${APP_VERSION}-x86_64_linux.AppImage"
 
     # Build AppImage
     - just build_appimage
@@ -116,24 +84,24 @@ create-release:
       links:
         # Android Universal Fat Apk
         - name: "$UNIVERSAL_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$UNIVERSAL_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$UNIVERSAL_APK_NAME?job=build_binaries"
         - name: "$UNIVERSAL_APK_NAME.sha256.txt"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$UNIVERSAL_APK_NAME.sha256.txt?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$UNIVERSAL_APK_NAME.sha256.txt?job=build_binaries"
         # Android armeabi-v7a-release
         - name: "$ARMEABI_V7A_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$ARMEABI_V7A_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARMEABI_V7A_APK_NAME?job=build_binaries"
         - name: "$ARMEABI_V7A_APK_NAME.sha256.txt"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$ARMEABI_V7A_APK_NAME.sha256.txt?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARMEABI_V7A_APK_NAME.sha256.txt?job=build_binaries"
         # Android arm64-v8a-release
         - name: "$ARM64_V8A_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$ARM64_V8A_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARM64_V8A_APK_NAME?job=build_binaries"
         - name: "$ARM64_V8A_APK_NAME.sha256.txt"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$ARM64_V8A_APK_NAME.sha256.txt?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARM64_V8A_APK_NAME.sha256.txt?job=build_binaries"
         # Android x86_64-release
         - name: "$X86_64_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$X86_64_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$X86_64_APK_NAME?job=build_binaries"
         - name: "$X86_64_APK_NAME.sha256.txt"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/main/latest/raw/releases/$X86_64_APK_NAME.sha256.txt?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$X86_64_APK_NAME.sha256.txt?job=build_binaries"
         # AppImage
         - name: "$NEW_APPIMAGE_NAME"
           url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APPIMAGE_NAME?job=build_binaries"
