--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -17,6 +17,7 @@ scraper = "0.24.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 ureq = { version = "3.1.2", features = ["rustls","socks-proxy"] }
+urlencoding = "2.1.3"
 
 [build-dependencies]
 rand = "0.9.2"
