--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -21,4 +21,6 @@ urlencoding = "2.1.3"
 
 [build-dependencies]
 rand = "0.9.2"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_yml = "0.0.12"
 ureq = { version = "3.1.2", features = ["rustls"] }
