--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,10 @@ dependencies:
   url_launcher: 6.3.2
   path_provider: 2.1.5
   flutter_bloc: 9.1.1
-  file_picker: 10.3.3
+  file_picker: 10.3.8
   external_path: 2.2.0
   freezed_annotation: 3.1.0
+  flutter_svg: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: 0.14.4
   change_app_package_name: 1.5.0
-  build_runner: 2.9.0
+  build_runner: 2.10.4
   freezed: 3.2.3
 
 flutter_launcher_icons:
@@ -77,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/magnet-svgrepo-com.png
+    - assets/magnet-svgrepo-com.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
