Source Hydration Complete

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ app.*.map.json
 # Custom Ignores
 android/.kotlin/sessions/kotlin-compiler-*.salive
 *.freezed.dart
+*.g.dart
 build_deps_dir
 releases
 target
