--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   freezed_annotation: 3.1.0
   flutter_svg: ^2.2.3
   hydrated_bloc: ^10.1.1
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,7 @@ dev_dependencies:
   change_app_package_name: 1.5.0
   build_runner: 2.10.4
   freezed: 3.2.3
+  json_serializable: ^6.11.2
 
 flutter_launcher_icons:
   android: true
