--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2024"
 anyhow = "1.0.100"
 chrono = "0.4.42"
 once_cell = "1.21.3"
-rand = "0.9.2"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
+ua_generator = "0.5.45"
 ureq = { version = "3.1.4", features = ["rustls","socks-proxy"] }
 urlencoding = "2.1.3"
 
