--- a/.github/workflows/release_windows.yml
+++ b/.github/workflows/release_windows.yml
@@ -3,7 +3,7 @@ name: Build & Release for Windows Platform.
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+*'
+      - 'windows_build*'
 
 jobs:
   build-release:
