--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2024"
 anyhow = "1.0.100"
 chrono = "0.4.43"
 once_cell = "1.21.3"
+regex = "1.12.3"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
-ua_generator = "0.5.46"
+ua_generator = "0.5.47"
 ureq = { version = "3.1.4", features = ["rustls","socks-proxy"] }
 urlencoding = "2.1.3"
 
