--- a/flatpak/flatpak-flutter.yml
+++ b/flatpak/flatpak-flutter.yml
@@ -8,6 +8,7 @@ command: torrents_digger
 finish-args:
   - --share=ipc
   - --share=network
+  - --filesystem=home
   - --socket=fallback-x11
   - --socket=wayland
   - --device=dri
@@ -27,6 +28,7 @@ modules:
       env:
         PUB_CACHE: /run/build/torrents_digger/.pub-cache
     build-commands:
+      - dart run build_runner build --delete-conflicting-outputs
       - flutter build linux --release --no-pub
       - install -D $BUNDLE_PATH/torrents_digger /app/bin/torrents_digger
       - cp -r $BUNDLE_PATH/lib /app/bin/lib
