fixed icon paths

--- a/flatpak/org.forthecommunity.torrents_digger.yml
+++ b/flatpak/org.forthecommunity.torrents_digger.yml
@@ -38,14 +38,14 @@ modules:
       - install -D $BUNDLE_PATH/torrents_digger /app/bin/torrents_digger
       - cp -r $BUNDLE_PATH/lib /app/bin/lib
       - cp -r $BUNDLE_PATH/data /app/bin/data
-      - install -D linux/org.forthecommunity.torrents_digger.desktop /app/share/applications/org.forthecommunity.torrents_digger.desktop
-      - install -D linux/icons/hicolor/64x64/apps/org.forthecommunity.torrents_digger.png
+      - install -D ../linux/org.forthecommunity.torrents_digger.desktop /app/share/applications/org.forthecommunity.torrents_digger.desktop
+      - install -D ../linux/icons/hicolor/64x64/apps/org.forthecommunity.torrents_digger.png
         /app/share/icons/hicolor/64x64/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/128x128/apps/org.forthecommunity.torrents_digger.png
+      - install -D ../linux/icons/hicolor/128x128/apps/org.forthecommunity.torrents_digger.png
         /app/share/icons/hicolor/128x128/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/256x256/apps/org.forthecommunity.torrents_digger.png
+      - install -D ../linux/icons/hicolor/256x256/apps/org.forthecommunity.torrents_digger.png
         /app/share/icons/hicolor/256x256/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/512x512/apps/org.forthecommunity.torrents_digger.png
+      - install -D ../linux/icons/hicolor/512x512/apps/org.forthecommunity.torrents_digger.png
         /app/share/icons/hicolor/512x512/apps/org.forthecommunity.torrents_digger.png
     sources:
       - type: git
