refactored & added screenshots for flatpak

--- a/linux/io.gitlab.forthecommunity.torrents_digger.desktop
+++ b/linux/io.gitlab.forthecommunity.torrents_digger.desktop
@@ -3,7 +3,7 @@ Name=Torrents Digger
 GenericName=Torrents Digger
 Comment=Digs Torrents from the Internet.
 Exec=torrents_digger
-Icon=org.forthecommunity.torrents_digger
+Icon=io.gitlab.forthecommunity.torrentsdigger
 Terminal=false
 Type=Application
 Categories=Network;FileTransfer;P2P;
