--- a/flatpak/flatpak-flutter.yml
+++ b/flatpak/flatpak-flutter.yml
@@ -1,4 +1,4 @@
-id: org.forthecommunity.torrents_digger
+id: io.gitlab.forthecommunity.torrents_digger
 runtime: org.freedesktop.Platform
 runtime-version: '25.08'
 sdk: org.freedesktop.Sdk
@@ -33,11 +33,12 @@ modules:
       - install -D $BUNDLE_PATH/torrents_digger /app/bin/torrents_digger
       - cp -r $BUNDLE_PATH/lib /app/bin/lib
       - cp -r $BUNDLE_PATH/data /app/bin/data
-      - install -D linux/org.forthecommunity.torrents_digger.desktop /app/share/applications/org.forthecommunity.torrents_digger.desktop
-      - install -D linux/icons/hicolor/64x64/apps/org.forthecommunity.torrents_digger.png /app/share/icons/hicolor/64x64/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/128x128/apps/org.forthecommunity.torrents_digger.png /app/share/icons/hicolor/128x128/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/256x256/apps/org.forthecommunity.torrents_digger.png /app/share/icons/hicolor/256x256/apps/org.forthecommunity.torrents_digger.png
-      - install -D linux/icons/hicolor/512x512/apps/org.forthecommunity.torrents_digger.png /app/share/icons/hicolor/512x512/apps/org.forthecommunity.torrents_digger.png
+      - install -D linux/io.gitlab.forthecommunity.torrents_digger.desktop /app/share/applications/io.gitlab.forthecommunity.torrents_digger.desktop
+      - install -D linux/io.gitlab.forthecommunity.torrents_digger.metainfo.xml /app/share/metainfo/io.gitlab.forthecommunity.torrents_digger.metainfo.xml
+      - install -D linux/icons/hicolor/64x64/apps/io.gitlab.forthecommunity.torrents_digger.png /app/share/icons/hicolor/64x64/apps/io.gitlab.forthecommunity.torrents_digger.png
+      - install -D linux/icons/hicolor/128x128/apps/io.gitlab.forthecommunity.torrents_digger.png /app/share/icons/hicolor/128x128/apps/io.gitlab.forthecommunity.torrents_digger.png
+      - install -D linux/icons/hicolor/256x256/apps/io.gitlab.forthecommunity.torrents_digger.png /app/share/icons/hicolor/256x256/apps/io.gitlab.forthecommunity.torrents_digger.png
+      - install -D linux/icons/hicolor/512x512/apps/io.gitlab.forthecommunity.torrents_digger.png /app/share/icons/hicolor/512x512/apps/io.gitlab.forthecommunity.torrents_digger.png
     
     sources:
       - type: git
