--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 chrono = "0.4.43"
+include_dir = "0.7.4"
 once_cell = "1.21.3"
 regex = "1.12.3"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
+rusqlite_migration = { version = "2.4.1", features = ["from-directory"] }
 scraper = "0.25.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
