--- a/lib_torrents_digger/Cargo.toml
+++ b/lib_torrents_digger/Cargo.toml
@@ -8,6 +8,8 @@ anyhow = "1.0.100"
 chrono = "0.4.43"
 include_dir = "0.7.4"
 once_cell = "1.21.3"
+r2d2 = "0.8.10"
+r2d2_sqlite = "0.32.0"
 regex = "1.12.3"
 rusqlite = { version = "0.38.0", features = ["bundled"] }
 rusqlite_migration = { version = "2.4.1", features = ["from-directory"] }
