--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,9 @@ stages:
   - build
   - release
 
-image: instrumentisto/flutter
-
-build_binaries:
+build_android_binaries:
   stage: build
+  image: instrumentisto/flutter
   rules:
     - if: $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+\+\d+$/
   script:
@@ -15,13 +14,8 @@ build_binaries:
     - curl https://sh.rustup.rs -sSf | sh -s -- -y
     - source "$HOME/.cargo/env"
 
-    # Installing cargo-binstall
-    - curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
-    # install just
-    - cargo binstall just
-
     # Creating essential dirs
-    - mkdir -p  build_deps_dir releases
+    - mkdir -p releases
 
     # Downloading & installing gitlab cli tool
     - wget https://gitlab.com/gitlab-org/cli/-/releases/v1.74.0/downloads/glab_1.74.0_linux_amd64.deb
@@ -37,7 +31,7 @@ build_binaries:
     - export APP_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/+//' | sed 's/ /_/g' | sed 's/\r//g')
 
     # Checksum File
-    - export CHECKSUM_FILENAME="${APP_NAME}_${APP_VERSION}_sha256.txt"
+    - export ANDROID_CHECKSUM_FILENAME="Android_Binaries_sha256_Checksums.txt"
 
     # Setting Apk Name according to cpu architectures
     - export UNIVERSAL_APK_NAME="${APP_NAME}_${APP_VERSION}_universal.apk"
@@ -50,72 +44,207 @@ build_binaries:
     - flutter pub get
     - dart run build_runner build # [Freezed]
 
-    - just build_apk
-    - just build_apk_per_abi
+    # Universal APK
+    - flutter build apk --release
+    # moving to releases dir
+    - mv build/app/outputs/flutter-apk/app-release.apk releases
+    # Rename APK
+    - mv releases/app-release.apk releases/$UNIVERSAL_APK_NAME
+    # Generate SHA256
+    - sha256sum releases/$UNIVERSAL_APK_NAME > releases/$ANDROID_CHECKSUM_FILENAME
 
-    # Save .env for release job
-    - echo "UNIVERSAL_APK_NAME=$UNIVERSAL_APK_NAME" > build.env
-    - echo "ARMEABI_V7A_APK_NAME=$ARMEABI_V7A_APK_NAME" >> build.env
-    - echo "ARM64_V8A_APK_NAME=$ARM64_V8A_APK_NAME" >> build.env
-    - echo "X86_64_APK_NAME=$X86_64_APK_NAME" >> build.env
+    # APK Per ABI
+    - flutter build apk --release --split-per-abi
+    # ARMEABI-V7A APK
+    # moving to releases dir
+    - mv build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk releases
+    # Rename APK
+    - mv releases/app-armeabi-v7a-release.apk releases/$ARMEABI_V7A_APK_NAME
+    # Generate SHA256
+    - sha256sum releases/$ARMEABI_V7A_APK_NAME >> releases/$ANDROID_CHECKSUM_FILENAME
+    # ARM64-V8A APK
+    # moving to releases dir
+    - mv build/app/outputs/flutter-apk/app-arm64-v8a-release.apk releases
+    # Rename APK
+    - mv releases/app-arm64-v8a-release.apk releases/$ARM64_V8A_APK_NAME
+    # Generate SHA256
+    - sha256sum releases/$ARM64_V8A_APK_NAME >> releases/$ANDROID_CHECKSUM_FILENAME
+    # X86_64 APK
+    # moving to releases dir
+    - mv build/app/outputs/flutter-apk/app-x86_64-release.apk releases
+    # Rename APK
+    - mv releases/app-x86_64-release.apk releases/$X86_64_APK_NAME
+    # Generate SHA256
+    - sha256sum releases/$X86_64_APK_NAME >> releases/$ANDROID_CHECKSUM_FILENAME
 
-    # Creating AppImage
-    # Grepping App Name & Version.
-    - export APPIMAGE_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
-    - export NEW_APPIMAGE_NAME="${APP_NAME}_${APP_VERSION}-x86_64_linux.AppImage"
-
-    # Build AppImage
-    - just build_appimage
-
-    # Save .env for release job
-    - echo "NEW_APPIMAGE_NAME=$NEW_APPIMAGE_NAME" >> build.env
-
-    # Flatpak
-    - export FLATPAK_FILENAME="${APP_NAME}_${APP_VERSION}_x86_64.flatpak"
-    - just build_flatpak
+    # Export variables for Release Job
+    - echo "UNIVERSAL_APK_NAME=${UNIVERSAL_APK_NAME}" >> android.env
+    - echo "ARMEABI_V7A_APK_NAME=${ARMEABI_V7A_APK_NAME}" >> android.env
+    - echo "ARM64_V8A_APK_NAME=${ARM64_V8A_APK_NAME}" >> android.env
+    - echo "X86_64_APK_NAME=${X86_64_APK_NAME}" >> android.env
+    - echo "ANDROID_CHECKSUM_FILENAME=$ANDROID_CHECKSUM_FILENAME" >> android.env
 
   artifacts:
     paths:
       - releases
-      - build.env # make sure dotenv is uploaded
+      - android.env
     reports:
-      dotenv: build.env
+      dotenv: android.env
+
+build_appimage:
+  stage: build
+  image: instrumentisto/flutter
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+\+\d+$/
+  script:
+    # Install Rust
+    - apt update -y && apt upgrade -y
+    - apt install -y curl git wget unzip
+    - curl https://sh.rustup.rs -sSf | sh -s -- -y
+    - source "$HOME/.cargo/env"
+
+    # Creating essential dirs
+    - mkdir -p releases
+
+    # Creating AppImage
+    # Grepping App Name & Version.
+    - export APP_NAME=$(grep 'name:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/-/_/g' | sed 's/\r//g')
+    - export APPIMAGE_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
+    - export NEW_APPIMAGE_NAME="${APP_NAME}_${APPIMAGE_VERSION}_x86_64_linux.AppImage"
+
+    # Checksum File
+    - export APPIMAGE_CHECKSUM_FILENAME="AppImage_sha256_Checksum.txt"
+
+    # Build AppImage
+    # installing dependencies
+    - apt-get install curl git unzip xz-utils zip libglu1-mesa build-essential libgtk-3-dev clang lld llvm cmake ninja-build pkg-config liblzma-dev -y
+    - apt install file fuse -y
+    # creating temporary dir for downloading/saving appimagetool and this is ignored in VCS.
+    # Downloading AppImageToolKit
+    - wget -P build_deps_dir -nc https://github.com/AppImage/appimagetool/releases/download/continuous/appimagetool-x86_64.AppImage
+    - chmod +x build_deps_dir/appimagetool-x86_64.AppImage
+    # Flutter Build release for linux
+    - flutter config --enable-linux-desktop
+    - dart run build_runner build
+    - flutter pub get
+    - flutter build linux --release
+    # Copying release bundle to AppDir
+    - mkdir -p AppImage/AppDir/usr/bin
+    - cp -r build/linux/x64/release/bundle/* AppImage/AppDir/usr/bin/
+    - chmod +x AppImage/AppDir/AppRun
+    - ARCH=x86_64 ./build_deps_dir/appimagetool-x86_64.AppImage AppImage/AppDir $NEW_APPIMAGE_NAME
+    - mv $NEW_APPIMAGE_NAME releases/
+    - sha256sum releases/$NEW_APPIMAGE_NAME >> releases/$APPIMAGE_CHECKSUM_FILENAME
+
+    # Save .env for release job
+    - echo "NEW_APPIMAGE_NAME=$NEW_APPIMAGE_NAME" >> appimage.env
+    - echo "APPIMAGE_CHECKSUM_FILENAME=$APPIMAGE_CHECKSUM_FILENAME" >> appimage.env
+
+  artifacts:
+    paths:
+      - releases
+      - appimage.env
+    reports:
+      dotenv: appimage.env
+
+build_flatpak:
+  stage: build
+  image: instrumentisto/flutter
+  rules:
+    - if: $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+\+\d+$/
+  script:
+    # Install Rust
+    - apt update -y && apt upgrade -y
+    - apt install -y curl git wget unzip
+    - curl https://sh.rustup.rs -sSf | sh -s -- -y
+    - source "$HOME/.cargo/env"
+
+    # Creating essential dirs
+    - mkdir -p releases
+
+    # Creating AppImage
+    # Grepping App Name & Version.
+    - export APP_NAME=$(grep 'name:' pubspec.yaml | head -1 | awk '{print $2}' | sed 's/-/_/g' | sed 's/\r//g')
+    - export APP_VERSION=$(grep 'version:' pubspec.yaml | head -1 | awk '{print $2}' | cut -c1-3);
+    - export FLATPAK_FILENAME="${APP_NAME}_${APP_VERSION}.flatpak"
+
+    # Checksum File
+    - export FLATPAK_CHECKSUM_FILENAME="Flatpak_sha256_Checksum.txt"
+
+      # Installing flatpak & flatpak-builder.
+    - apt install flatpak flatpak-builder -y
+    # Adding Flathub Repo.
+    - flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+    # Installing Free Desktop Platform.
+    - flatpak install flathub org.freedesktop.Platform//25.08 -y
+    # Installing Free Desktop SDK
+    - flatpak install flathub org.freedesktop.Sdk//25.08 -y
+    # Installing Free Desktop LLVM.
+    - flatpak install flathub org.freedesktop.Sdk.Extension.llvm20//25.08 -y
+    - cd flatpak
+    # Building App
+    - flatpak-builder --repo=repo --force-clean build-dir io.gitlab.forthecommunity.torrents_digger.yml
+    # Packaging .flatpak file
+    - flatpak build-bundle repo $FLATPAK_FILENAME io.gitlab.forthecommunity.torrents_digger
+    - mv $FLATPAK_FILENAME ../releases/
+    - cd ..
+    - sha256sum releases/$FLATPAK_FILENAME >> releases/$FLATPAK_CHECKSUM_FILENAME
+
+    # Save .env for release job
+    - echo "FLATPAK_FILENAME=$FLATPAK_FILENAME" >> flatpak.env
+    - echo "FLATPAK_CHECKSUM_FILENAME=$FLATPAK_CHECKSUM_FILENAME" >> flatpak.env
+
+  artifacts:
+    paths:
+      - releases
+      - flatpak.env
+    reports:
+      dotenv: flatpak.env
 
 create-release:
   stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   needs:
-    - job: build_binaries
+    - job: build_android_binaries
+      artifacts: true
+    - job: build_appimage
+      artifacts: true
+    - job: build_flatpak
       artifacts: true
   rules:
     - if: $CI_COMMIT_TAG =~ /^v\d+\.\d+\.\d+\+\d+$/
   script:
-    - echo "Preparing release..."
-    - . build.env # use dot instead of source for POSIX sh compatibility
+    - echo "Creating release for $CI_COMMIT_TAG"
   release:
     tag_name: "$CI_COMMIT_TAG"
     name: "Release $CI_COMMIT_TAG"
     description: "Automated GitLab CI/CD release for version $CI_COMMIT_TAG"
     assets:
       links:
-        # Android Universal Fat Apk
+        # Android Universal Apk
         - name: "$UNIVERSAL_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$UNIVERSAL_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$UNIVERSAL_APK_NAME?job=build_android_binaries"
         # Android armeabi-v7a-release
         - name: "$ARMEABI_V7A_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARMEABI_V7A_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARMEABI_V7A_APK_NAME?job=build_android_binaries"
         # Android arm64-v8a-release
         - name: "$ARM64_V8A_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARM64_V8A_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ARM64_V8A_APK_NAME?job=build_android_binaries"
         # Android x86_64-release
         - name: "$X86_64_APK_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$X86_64_APK_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$X86_64_APK_NAME?job=build_android_binaries"
+        # SHA-256 Android Binaries Checksums
+        - name: "$ANDROID_CHECKSUM_FILENAME"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$ANDROID_CHECKSUM_FILENAME?job=build_android_binaries"
         # AppImage
         - name: "$NEW_APPIMAGE_NAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APPIMAGE_NAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$NEW_APPIMAGE_NAME?job=build_appimage"
+        # SHA-256 AppImage Checksum
+        - name: "$APPIMAGE_CHECKSUM_FILENAME"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$APPIMAGE_CHECKSUM_FILENAME?job=build_appimage"
         # Flatpak
         - name: "$FLATPAK_FILENAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$FLATPAK_FILENAME?job=build_binaries"
-        # SHA-256 Checksum
-        - name: "$CHECKSUM_FILENAME"
-          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$CHECKSUM_FILENAME?job=build_binaries"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$FLATPAK_FILENAME?job=build_flatpak"
+        # SHA-256 Flatpak Checksum
+        - name: "$FLATPAK_CHECKSUM_FILENAME"
+          url: "https://gitlab.com/$CI_PROJECT_PATH/-/jobs/artifacts/$CI_COMMIT_REF_NAME/raw/releases/$FLATPAK_CHECKSUM_FILENAME?job=build_flatpak"
